[Facebook Web Crawler] more friendly

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
+    <meta property="og:image"           content="TemplateData/logo.jpg">
+    <meta property="og:image:type"      content="image/jpg">
+    <meta property="og:image:width"     content="500">
+    <meta property="og:image:height"    content="432">
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Puzzles</title>
+    <title>Unity WebGL Player | Super8</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -14,11 +19,11 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 960px; height: 600px"></div>
+      <div id="gameContainer" style="width: 600px; height: 768px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Puzzles</div>
+        <div class="title">Super8</div>
       </div>
     </div>
   </body>
