--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <meta property="og:image"           content="TemplateData/logo.jpg">
+    <meta property="og:image"           content="https://phuocnb.github.io/super8/TemplateData/logo.jpg">
     <meta property="og:image:type"      content="image/jpg">
     <meta property="og:image:width"     content="500">
     <meta property="og:image:height"    content="432">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Super8</title>
+    <link rel="logo for FBWebCrawler" href="TemplateData/favicon.ico">
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
