--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:image:height"    content="432">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Super8</title>
+    <title>Super8 | Mad Puzzles</title>
     <link rel="logo for FBWebCrawler" href="TemplateData/favicon.ico">
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
