[Facebook Web Crawler] more friendly

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
+    <meta property="og:title" content="Super8 | Mad Puzzles">
+    <meta property="og:description" content="Absolutely EASY to play NOT to get HIGH SCORE. A casual, time killer machine. Enjoy it!">
+
     <meta property="og:image"           content="https://phuocnb.github.io/super8/TemplateData/logo.jpg">
     <meta property="og:image:type"      content="image/jpg">
     <meta property="og:image:width"     content="500">
